@@ -23,7 +23,9 @@ import dev.terminalmc.clientsort.exception.PayloadHandlerException.InvalidDataEx
 import dev.terminalmc.clientsort.mixin.accessor.ContainerAccessor;
 import dev.terminalmc.clientsort.network.handler.validate.PayloadResult;
 import dev.terminalmc.clientsort.platform.services.PlatformServices;
-import net.minecraft.network.protocol.common.custom.CustomPacketPayload;
+import net.minecraft.network.protocol.Packet;
+import net.minecraft.network.protocol.game.ClientGamePacketListener;
+import net.minecraft.resources.ResourceLocation;
 import net.minecraft.server.MinecraftServer;
 import net.minecraft.server.level.ServerPlayer;
 import net.minecraft.world.inventory.AbstractContainerMenu;
@@ -61,9 +63,9 @@ public abstract class PayloadHandler {
             ThrowingConsumer<AbstractContainerMenu> contextValidator,
             ThrowingConsumer<AbstractContainerMenu> schemaValidator,
             ThrowingConsumer<AbstractContainerMenu> operator,
-            CustomPacketPayload.Type<?> payloadType,
-            CustomPacketPayload.Type<?> responseType,
-            BiFunction<PayloadResult, String, CustomPacketPayload> responseProvider
+            ResourceLocation payloadChannel,
+            ResourceLocation responseChannel,
+            BiFunction<PayloadResult, String, Packet<ClientGamePacketListener>> responseProvider
     ) {
         @Nullable AbstractContainerMenu menu = null;
         PayloadResult result = PayloadResult.SUCCESS;
@@ -73,9 +75,12 @@ public abstract class PayloadHandler {
         if (player.gameMode.getGameModeForPlayer().equals(GameType.SPECTATOR)) {
             result = PayloadResult.UNSUPPORTED_OP;
             message = "This operation is not available in spectator mode.";
-            if (PlatformServices.getInstance().canSendToPlayer(player, responseType)) {
-                PlatformServices.getInstance()
-                        .sendToPlayer(player, responseProvider.apply(result, message));
+            if (PlatformServices.getInstance().canSendToPlayer(player, responseChannel)) {
+                PlatformServices.getInstance().sendToPlayer(
+                        player,
+                        responseChannel,
+                        responseProvider.apply(result, message)
+                );
             }
             return;
         }
@@ -102,7 +107,7 @@ public abstract class PayloadHandler {
                 message = PayloadHandlerException.GENERIC_MESSAGE;
                 ClientSort.LOG.error(
                         "Encountered an unexpected exception while handling payload '{}' from player '{}': {}",
-                        payloadType.id(),
+                        payloadChannel,
                         player,
                         e
                 );
@@ -111,12 +116,17 @@ public abstract class PayloadHandler {
             if (menu != null) {
                 menu.resumeRemoteUpdates();
                 menu.broadcastChanges();
-                ((ContainerAccessor) menu.slots.getFirst().container).clientsort$setChanged();
-                ((ContainerAccessor) menu.slots.getLast().container).clientsort$setChanged();
+                ((ContainerAccessor) menu.slots.get(0).container)
+                        .clientsort$setChanged();
+                ((ContainerAccessor) menu.slots.get(menu.slots.size() - 1).container)
+                        .clientsort$setChanged();
             }
-            if (PlatformServices.getInstance().canSendToPlayer(player, responseType)) {
-                PlatformServices.getInstance()
-                        .sendToPlayer(player, responseProvider.apply(result, message));
+            if (PlatformServices.getInstance().canSendToPlayer(player, responseChannel)) {
+                PlatformServices.getInstance().sendToPlayer(
+                        player,
+                        responseChannel,
+                        responseProvider.apply(result, message)
+                );
             }
         }
     }
@@ -144,7 +154,7 @@ public abstract class PayloadHandler {
 
         if (log || serverOptions().validateItemType) {
             if (!expected.isEmpty() && !actual.isEmpty()) {
-                if (!ItemStack.isSameItemSameComponents(expected, actual))
+                if (!ItemStack.isSameItemSameTags(expected, actual))
                     invalid = true;
             }
         }
